# ztest

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  result
docker/: builder.Dockerfile  runner-base.Dockerfile
docs/: README.md  architecture-overview.md  cluster-administration.md  clusters.md  console-architecture.md  engine-design.md  openshift-cluster-setup.md  qos-design.md  remote-test-execution.md  resource-graph-design.md  running-tests.md  rust-version-matrix.md  storage-backend.md  test-author-api.md
examples/: preflight_demo.rs
fixtures/kind/: 00-snapshot-crds.yaml  10-snapshot-controller.yaml  20-csi-hostpath-rbac.yaml  30-csi-hostpath-driver.yaml  40-ztest-classes.yaml  README.md
fixtures/testnet/: README.md
macros/: Cargo.toml
macros/src/: lib.rs
proto/: compact_formats.proto  service.proto
src/: cancel.rs  cluster.rs  cluster_config.rs  component.rs  env.rs  error.rs  inventory.rs  lib.rs  manifest.rs  materialize.rs  mount.rs  mounts.rs  naming.rs  portforward.rs  regtest.rs  regtest_conf.rs  seeds.rs  testnet_conf.rs  topology.rs  utils.rs
src/backends/: image.rs  librustzcash.rs  lightwalletd.rs  mod.rs  oci.rs  zainod.rs  zcashd.rs  zebra.rs  zingo.rs
src/backends/image/: bundle.rs  docker.rs  kind.rs  mod.rs  openshift.rs
src/cli/: args_peek.rs  cleanup.rs  cluster.rs  cluster_tools.rs  list_mounts.rs  mod.rs  preview.rs  run.rs  setup.rs  snapshot.rs
src/cli/console/: bridge.rs  child.rs  engine.rs  footer.rs  mod.rs  pty.rs  render.rs  viewport.rs
src/engine/: dylib.rs  e2e.rs  events.rs  exec.rs  local_runner.rs  mod.rs  panel.rs  plan.rs  pod_runner.rs  reporter.rs  schedule.rs
src/grpc/: lightwalletd.rs  mod.rs
src/handles/: client.rs  indexer.rs  jsonrpc.rs  mod.rs  ready.rs  types.rs  validator.rs  wallet.rs
src/handles/backends/: lightwalletd.rs  mod.rs  zainod.rs  zcashd.rs  zebra.rs  zingo.rs
src/pipeline/: archives.rs  build.rs  cluster.rs  docker.rs  events.rs  images.rs  kind_load.rs  mod.rs  remote_compile.rs
src/preflight/: live.rs  mod.rs  pinned.rs  render.rs  theme.rs
src/proto/: mod.rs
src/protocol/: mod.rs  zcash_rpc.rs
src/provisioning/: e2e_isolation.rs  image.rs  mod.rs  reap.rs  seed.rs
src/qos/: allocator.rs  kube_store.rs  ledger.rs  live.rs  lower.rs  mod.rs  schedule.rs  scheduler.rs  store.rs  units.rs
src/resource/: context.rs  entry.rs  graph.rs  kube.rs  mod.rs  provider.rs  state.rs
src/resource/impls/: base_images.rs  buildah.rs  builder.rs  image.rs  mod.rs  policy.rs  qos.rs  scaffolding.rs  seed.rs  storage.rs
src/storage/: lfs.rs  local.rs  mod.rs
tests/: api_surface.rs  qos_attr.rs
tests/assets/: archive.tar.zst
