[workspace]
members = ["macros"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Zingolabs <zingo@zingolabs.org>"]
repository = "https://github.com/zingolabs/ztest"
homepage = "https://github.com/zingolabs/ztest"
version = "0.0.0"

[workspace.dependencies]
ztest_macros = { path = "macros", version = "0.0.0" }

thiserror = "1.0.64"
tokio = "1.42.0"
tracing = "0.1.40"
serde_json = "1.0.132"
hex = "0.4.3"
reqwest = { version = "0.12", default-features = false }

zcash_protocol = { version = "0.9.0", features = ["local-consensus"] }

# ─────────────────────────── ztest crate ──────────────────────────────
[package]
name = "ztest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Boot Zcash topologies on Kubernetes and hand typed RPC handles back to test code."

[lib]
name = "ztest"
path = "src/lib.rs"

[dependencies]
ztest_macros = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "net", "io-util", "time", "fs", "process", "signal"] }
tracing = { workspace = true }
async-trait = "0.1"

kube = { version = "0.99", default-features = false, features = ["client", "runtime", "ws", "rustls-tls"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
rand = "0.8"
sha2 = "0.10"
hex = { workspace = true }
walkdir = "2"
inventory = "0.3"
ctor = "0.2"

zcash_protocol = { workspace = true }

# Runtime for the vendored lightwalletd gRPC bindings in `src/proto` (the
# `cash.z.wallet.sdk.rpc` client). ztest owns these bindings rather than
# pulling `zcash_client_backend`'s proto (which drags a wallet stack and marks
# the still-served nullifier RPCs `#[deprecated]`). prost = message codec,
# tonic-prost = the `ProstCodec` the generated client uses over `tonic`.
prost = "0.14"
tonic-prost = "0.14"

# In-process wallet backend (`backends::zingo`). zingolib runs as a library
# in the test binary against the pod-hosted indexer's gRPC. Git pins MUST
# match the consumer crates' pins so the resolved zcash_* / zebra-chain /
# nonempty / TxId copies unify into single versions in the lockfile.
zingolib = { git = "https://github.com/zingolabs/zingolib.git", rev = "61418d6ecbc679a88da8268a2be5db3926501fc6", features = [
    "testutils",
], optional = true }
zingolib_testutils = { git = "https://github.com/zingolabs/zingolib.git", rev = "61418d6ecbc679a88da8268a2be5db3926501fc6", optional = true }
pepper-sync = { git = "https://github.com/zingolabs/zingolib.git", rev = "61418d6ecbc679a88da8268a2be5db3926501fc6", optional = true }
zingo_test_vectors = { git = "https://github.com/zingolabs/infrastructure.git", tag = "zcash_local_net_v0.6.0", optional = true }
# Only the `zingo` backend needs zebra-chain (zingolib's ConfiguredActivationHeights
# param type); ztest core no longer links it. Pinned to 9.0.0 to match zingolib
# rev 61418d6e's resolved zebra so the type unifies. Optional + gated on `zingo`.
zebra-chain = { version = "9.0.0", optional = true }
# zingo-only (the in-process wallet backend); gated on the `zingo` feature.
zip32 = { version = "0.2.1", optional = true }
tempfile = { version = "3.2", optional = true }
# Used by the generated proto client (`http::uri::PathAndQuery`).
http = "1.1"

reqwest = { workspace = true }
jsonrpsee-types = "0.24"
# `codegen` is required by the generated client in `src/proto/service.rs`
# (`tonic::codegen`); `transport`/`channel` for the gRPC connection.
tonic = { version = "0.14", default-features = false, features = ["transport", "channel", "codegen"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

owo-colors = "4.3.0"
supports-color = "3.0.2"
supports-unicode = "3.0.0"
bytesize = "2.3.1"
terminal_size = "0.4"
crossterm = "0.29"
portable-pty = "0.9"
# Inline-viewport TUI for the unified bottom console; `scrolling-regions` MUST
# stay off (default) so output scrolls into native terminal scrollback rather
# than a DECSTBM region. `avt` is an in-memory VT emulator whose `feed_str`
# emits lines as they scroll off the top — the mechanism for forwarding child
# output into native scrollback (see docs/engine-design.md).
ratatui = "0.30"
avt = "0.18"
libc = "0.2"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# `ztest run` shells out to `cargo nextest list` (inventory) and `cargo nextest
# run` (the run, under the PTY console). `nextest-metadata` parses the
# `cargo nextest list --json` summary into the `TestListSummary` the image
# inventory phase consumes. Version tracks the installed `cargo nextest`; shares
# the single crossterm 0.29 in the lock — no skew with ratatui's crossterm.
nextest-metadata = "0.14"

[features]
default = []
# In-process zingolib wallet backend (`backends::zingo`, `Wallet::zingo`).
# OFF by default so consumers that only drive validators/indexers (e.g. zaino's
# walletless-tests) don't link zingolib — and, transitively, zingolib_testutils
# → zcash_local_net → the old zebra crates. Enable it in suites that exercise an
# in-process wallet (e.g. zaino's wallet-tests).
zingo = [
    "dep:zingolib",
    "dep:zingolib_testutils",
    "dep:pepper-sync",
    "dep:zingo_test_vectors",
    "dep:zebra-chain",
    "dep:zip32",
    "dep:tempfile",
]

[dev-dependencies]
# Property testing for the pure admission core: the scheduler is a
# deterministic function of its inputs (no clock, no I/O), so randomized
# op-sequences are the natural way to assert its invariants (no overcommit,
# committed == Σ live leases) far past what hand-picked cases reach. Kept fast
# and hermetic — no cluster, in line with the FakeStore/logical-clock suite.
proptest = "1"

[build-dependencies]
# Codegen for the vendored lightwalletd proto in `proto/` → `src/proto`.
# Needs `protoc` at build time (provided by the dev shell, see flake.nix).
tonic-prost-build = "0.14"
