[workspace]
members = ["macros"]
resolver = "2"

# The zingolabs/librustzcash `basic_ironwood` wallet stack resolves shardtree
# 0.6.2 / incrementalmerkletree 0.8.2 from crates.io (its own lockfile), which
# already carry the retained-checkpoint methods the wallet stack needs — so no
# `[patch.crates-io]` override is required (the previous decefc46 git pin was a
# stale pre-release API missing `add_retained_checkpoint` et al. and broke the
# basic_ironwood zcash_client_sqlite build).

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Zingolabs <zingo@zingolabs.org>"]
repository = "https://github.com/zingolabs/ztest"
homepage = "https://github.com/zingolabs/ztest"
version = "0.0.0"

[workspace.dependencies]
ztest_macros = { path = "macros", version = "0.0.0" }

thiserror = "1.0.64"
tokio = "1.42.0"
tracing = "0.1.40"
serde_json = "1.0.132"
hex = "0.4.3"
reqwest = { version = "0.12", default-features = false }

# librustzcash wallet stack, aligned to the orchard 0.15 line so the
# librustzcash backend's in-process Orchard proofs validate against a zebra
# 6.0.0-rc.0 validator (which links orchard 0.15). The leaf wallet crates
# (zcash_client_backend, zcash_client_sqlite) are not published on the 0.15
# line, so the whole stack is git-sourced from the zingolabs/librustzcash
# `basic_ironwood` branch (pinned), which adds NU6.3/Ironwood wallet support
# (`AccountBalance::ironwood_balance`) on top of the orchard 0.15 line and
# resolves zcash_protocol 0.10 / zcash_keys 0.15 / zcash_primitives 0.29. See
# the git deps in the crate below.
zcash_protocol = { git = "https://github.com/zingolabs/librustzcash", rev = "d7270910dd46d9e16e9c3a6f4a1704d7511db36e", features = ["local-consensus"] }

# ─────────────────────────── ztest crate ──────────────────────────────
[package]
name = "ztest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Boot Zcash topologies on Kubernetes and hand typed RPC handles back to test code."

[lib]
name = "ztest"
path = "src/lib.rs"

[dependencies]
ztest_macros = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "net", "io-util", "time", "fs", "process", "signal"] }
tracing = { workspace = true }
async-trait = "0.1"

kube = { version = "0.99", default-features = false, features = ["client", "runtime", "ws", "rustls-tls"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
rand = "0.8"
sha2 = "0.10"
hex = { workspace = true }
walkdir = "2"
tar = "0.4"
globset = "0.4"
inventory = "0.3"
ctor = "0.2"

zcash_protocol = { workspace = true }

# Runtime for the vendored lightwalletd gRPC bindings in `src/proto` (the
# `cash.z.wallet.sdk.rpc` client). ztest owns these bindings rather than
# pulling `zcash_client_backend`'s proto (which drags a wallet stack and marks
# the still-served nullifier RPCs `#[deprecated]`). prost = message codec,
# tonic-prost = the `ProstCodec` the generated client uses over `tonic`.
prost = "0.14"
tonic-prost = "0.14"

# In-process wallet backend (`backends::zingo`). zingolib runs as a library
# in the test binary against the pod-hosted indexer's gRPC. Git pins MUST
# match the consumer crates' pins so the resolved zcash_* / zebra-chain /
# nonempty / TxId copies unify into single versions in the lockfile.
zingolib = { git = "https://github.com/zingolabs/zingolib.git", rev = "61418d6ecbc679a88da8268a2be5db3926501fc6", features = [
    "testutils",
], optional = true }
pepper-sync = { git = "https://github.com/zingolabs/zingolib.git", rev = "61418d6ecbc679a88da8268a2be5db3926501fc6", optional = true }
# BIP-39 mnemonic type for `WalletBase::Mnemonic`, used by the inlined
# `backends::zingo::client_builder` (replaces the one thing ztest used from
# `zingolib_testutils`). Version MUST match zingolib rev 61418d6e's `bip0039`
# pin so the `Mnemonic` type unifies into one copy.
bip0039 = { version = "0.13", optional = true }
zingo_test_vectors = { git = "https://github.com/zingolabs/infrastructure.git", tag = "zcash_local_net_v0.6.0", optional = true }
# Only the `zingo` backend needs zebra-chain (zingolib's ConfiguredActivationHeights
# param type); ztest core no longer links it. Pinned to 9.0.0 to match zingolib
# rev 61418d6e's resolved zebra so the type unifies. Optional + gated on `zingo`.
zebra-chain = { version = "9.0.0", optional = true }
# zingo-only (the in-process wallet backend); gated on the `zingo` feature.
zip32 = { version = "0.2.1", optional = true }
tempfile = { version = "3.2", optional = true }

# librustzcash wallet backend (`backends::librustzcash`); gated on the
# `librustzcash` feature. Pure-Rust zcash_client_backend reference stack; no
# zebra / zcash_local_net / libstdc++. `sync` pulls the lightwalletd-tonic gRPC
# client; `bundled-prover` compiles the Sapling params into the binary so
# send/shield need no external files.
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash", rev = "d7270910dd46d9e16e9c3a6f4a1704d7511db36e", features = ["sync", "orchard", "transparent-inputs"], optional = true }
# orchard + transparent-inputs MUST match the backend's features, else sqlite's
# cfg-gated Orchard/EphemeralTransparent handling is compiled out and its
# `Recipient`/`Note` matches go non-exhaustive against the backend enums.
zcash_client_sqlite = { git = "https://github.com/zingolabs/librustzcash", rev = "d7270910dd46d9e16e9c3a6f4a1704d7511db36e", features = ["orchard", "transparent-inputs"], optional = true }
zcash_keys = { git = "https://github.com/zingolabs/librustzcash", rev = "d7270910dd46d9e16e9c3a6f4a1704d7511db36e", features = ["sapling", "orchard"], optional = true }
zcash_proofs = { git = "https://github.com/zingolabs/librustzcash", rev = "d7270910dd46d9e16e9c3a6f4a1704d7511db36e", features = ["bundled-prover"], optional = true }
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "d7270910dd46d9e16e9c3a6f4a1704d7511db36e", optional = true }
secrecy = { version = "0.8", optional = true }
# Named to spell the `WalletDb<rusqlite::Connection, ..>` connection type;
# version tracks zcash_client_sqlite 0.21.1's resolved rusqlite.
rusqlite = { version = "0.37", optional = true }
# Used by the generated proto client (`http::uri::PathAndQuery`).
http = "1.1"

reqwest = { workspace = true, features = ["rustls-tls", "json", "stream"] }
# `io` gives `StreamReader`, wrapping a reqwest byte stream (the LFS blob GET)
# as an `AsyncRead` we pipe into the seed uploader pod's stdin.
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
jsonrpsee-types = "0.24"
# `codegen` is required by the generated client in `src/proto/service.rs`
# (`tonic::codegen`); `transport`/`channel` for the gRPC connection.
tonic = { version = "0.14", default-features = false, features = ["transport", "channel", "codegen"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

owo-colors = "4.3.0"
supports-color = "3.0.2"
supports-unicode = "3.0.0"
bytesize = "2.3.1"
terminal_size = "0.4"
portable-pty = "0.9"
# `avt` is an in-memory VT emulator whose `feed_str` emits lines as they scroll
# off the top — the mechanism the unified bottom console uses to forward child
# output into native terminal scrollback while repainting a manual sticky footer
# (see src/cli/console/mod.rs).
avt = "0.18"
libc = "0.2"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# `ztest run` shells out to `cargo nextest list` (inventory) and `cargo nextest
# run` (the run, under the PTY console). `nextest-metadata` parses the
# `cargo nextest list --json` summary into the `TestListSummary` the image
# inventory phase consumes. Version tracks the installed `cargo nextest`.
nextest-metadata = "0.14"
dialoguer = { version = "0.12.0", default-features = false }

[features]
default = ["librustzcash"]
# In-process librustzcash wallet backend (`backends::librustzcash`,
# `Wallet::librustzcash`) — ztest's default, batteries-included wallet. A
# pure-Rust `zcash_client_backend` + `zcash_client_sqlite` wallet that syncs
# over the indexer's lightwalletd gRPC and builds shielded txs with bundled
# Sapling params (`zcash_proofs/bundled-prover`) + embedded Orchard params, so
# it needs no external param files, no zingolib, no zcash_local_net, no zebra,
# and no `libstdc++`. Unlike the eager-memo-parsing zingolib sync engine, its
# scanner stores raw memo bytes, so it tolerates non-UTF-8 coinbase memos.
# Walletless consumers can drop it with `default-features = false`.
librustzcash = [
    "dep:zcash_client_backend",
    "dep:zcash_client_sqlite",
    "dep:zcash_keys",
    "dep:zcash_proofs",
    "dep:zcash_primitives",
    "dep:secrecy",
    "dep:rusqlite",
    "dep:zip32",
    "dep:tempfile",
    "dep:bip0039",
]
# In-process zingolib wallet backend (`backends::zingo`, `Wallet::zingo`).
# OFF by default so consumers that only drive validators/indexers (e.g. zaino's
# walletless-tests) don't link zingolib. The backend links `zingolib` proper
# only — NOT `zingolib_testutils`, whose sole use here (`ClientBuilder`) is
# inlined in `backends::zingo::client_builder`, keeping `zcash_local_net` /
# `zebra-consensus` / the C++ `libzcash_script` out of the graph entirely.
zingo = [
    "dep:zingolib",
    "dep:pepper-sync",
    "dep:zingo_test_vectors",
    "dep:zebra-chain",
    "dep:zip32",
    "dep:tempfile",
    "dep:bip0039",
]

[dev-dependencies]
# Property testing for the pure admission core: the scheduler is a
# deterministic function of its inputs (no clock, no I/O), so randomized
# op-sequences are the natural way to assert its invariants (no overcommit,
# committed == Σ live leases) far past what hand-picked cases reach. Kept fast
# and hermetic — no cluster, in line with the FakeStore/logical-clock suite.
proptest = "1"

[build-dependencies]
# Codegen for the vendored lightwalletd proto in `proto/` → `src/proto`.
# Needs `protoc` at build time (provided by the dev shell, see flake.nix).
tonic-prost-build = "0.14"
